# nethackathon2021

./: .gitignore  .gitmodules  .nethackrc  avanza.py  avanza.txt  build-everything  build.sh  build_nix.sh  chest.py  chest.txt  compile_proto  db.py  env.nix  event_handler.py  event_handler_nix.sh  fiskapa.py  flake.nix  hampe.py  jens.py  kalsong.txt  kubernetes.sh  launch_backend.sh  nethack.nix  nethack.nix_to_nix.sh  nh.proto  nh_pb2.py  observer.py  oldjens.py  ovh-ttyrec.nix  postgres  reset_db  reset_db.py  rmah.py  server_nix.sh  session.py  shell.nix  stock_ticker.py  test.c  testjens.py  vinst.py  (+1 more)
GPT/: flake.nix  mic_seq.py  shell.sh
client/NetHack/: build-everything
client/rust/: Cargo.toml  build.rs  cargo-build-nix  cbindgen.toml  hack.h
client/rust/nethack-rs/: Cargo.toml  regen.py
client/rust/nethack-rs/src/: lib.rs
client/rust/proto/: nh_obj.proto
client/rust/src/: ipc.rs  lib.rs  main.rs  nh_api.rs  oracle.rs
dummy/: go.mod  main.go
go-nethackchat/: go.mod  main.go
go-nhwikiparser/: go.mod  go.sum  main.go
go-oracle-worker/: go.mod  main.go
go-web/: go.mod  go.sum  main.go
go-web/templates/: index.html.template  react.jsx
include/: hack.h  rust.h
nethack-web/go/: go.mod  go.sum  main.go
nethack-web/web/: index.html  package-lock.json  package.json
nethack-web/web2/: index.html  (+4 more)
nhctl/: _build-oracle-worker.go  _deploy-oracle-worker.go  go.mod  go.sum  main.go
nhmon/: font.txt
oracle-main-service/: main.go
oracle-master-service/: build_upload.sh
oracle-rag-chat/: Cargo.toml
oracle-rag-chat/src/: main.rs
oracle-worker/: build_win.sh  main.go
oracle-worker-service/: ORIGIN  flake.nix  llama.cpp  perplexity  quantize  run.sh  serve.py
src/: allmain.c  apply.c  attrib.c  do.c  do_wear.c  eat.c  end.c  invent.c  mail.c  mkobj.c  mon.c  monst.c  objects.c  pickup.c  trap.c  u_init.c  worn.c  write.c  zap.c
stonk-web/: main.go
telefon/: requirements.txt  song.py  telefon.py
(+514 files in other folders)
