[package]
name = "oracle-rag-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
glob = "0.3.1"
ptyprocess = "0.4.1"
# sqlx = "0.7.4"
sqlx = { version="0.7.3" , features = [ "runtime-tokio", "postgres", "chrono" ]}
sqlx-cli = "0.7.3"
tokio = { version = "1.34.0", features = ["rt", "macros"]}
