[package]
name = "nh2021"
version = "0.1.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "connect_test"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
prost-types = "0.7"
nethack-rs = { path = "nethack-rs" }
libc = "0.2.140"
crossterm = "0.26.1"
selecting = "1.1.0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1.0.95"
termios = "0.3.3"
textwrap = "0.16.0"
lazy_static = "1.4.0"
regex = "1.8.1"

[build-dependencies]
prost-build = { version = "0.7" }
